log
Fri Mar 11 22:38:47 HSP 2022: 
 tests:  0|7
total_score: 0/70
1b7e55e
Sat Mar 12 13:29:37 HSP 2022: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
81fdd28
Sat Mar 12 13:40:14 HSP 2022: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:43:22: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
    int* subArreglo = a[primerDato-1];
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
2aca5ef
Sat Mar 12 13:43:30 HSP 2022: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:45:14: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    subArreglo=a[primerDato];
              ^
cc1.exe: all warnings being treated as errors
Compilation failed
b361ee9
Sat Mar 12 13:45:16 HSP 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
f86bf6c
